# IRC-library

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  README.md  version.hpp.in
cmake_Modules/: cmakeapt.cmake
head/: irc_class_config.hpp.in  runtime.hpp  web.hpp
include/: CMakeLists.txt  init.cpp  irc.hpp  runtime.cpp
include/DA/: irc.hpp
include/DA/irc/: command.hpp  constructor.hpp  main.hpp  operator.hpp  perform.hpp
include/irc/: command.hpp  connect.hpp  constructor.hpp  irc.hpp  main.hpp  operator.hpp  perform.hpp  version.hpp  version.hpp.in
src/: CMakeLists.txt
src/irc/: connect.cpp
test/: CMakeLists.txt  test.cpp
tool/: build  install.sh
